assets/stylesheets/main.css
#name{
	font-weight: 500;
	padding-left: 50px;
}

#first-name-1{
	color:#0095B7;
}

#first-name-2{
	color: #a8f0ec;
}

#last-name-1{
	color: #1a1a1a;
}

#last-name-2{
	color: #FFFFFF;
}

nav{
	height: 45px;
}

.current-page{
	font-weight: 900;
}

ul{
	padding-right: 2.8%;
}

#container{
	height: 350px !important;
	background: url("../images/northernlights.jpg") !important;
	background-size: 100% 100% !important;
}

h1{
	font-size: 450%;
	word-spacing: .3em;
}

#title{
	color: #ffffff;
}

.animated-name {
           
    animation-duration: 2s;
    animation-fill-mode: both;
}

.animated-title{

  	animation-delay: 2s;
	animation-duration: 2s;
	animation-fill-mode: both;
}
         
@-webkit-keyframes fadeIn {
	0% {opacity: 0;}
    100% {opacity: 1;}
}
         
@keyframes fadeIn {
	0% {opacity: 0;}
	100% {opacity: 1;}
}
         
.fadeIn {
	-webkit-animation-name: fadeIn;
	animation-name: fadeIn;
}

#intro-container{
	padding: 3% 5%;
}

#intro-header{
	font-size: 380%;
}

#introduction{
	padding-top: 1%;
	font-size: 160%;
}

#skills{
	background-color:#333333;
	color: #FFFFFF;
}

#skills h3{
	font-size: 240%;
}

#icons{
	padding-top: 20px;
}

#icons i{
	display: inline-block;
	color: white;
	font-size: 8em;
	padding-bottom: .25em;
	padding-right: .15em;
}

#contact-heading{
	font-size: 350%;
	font-weight: 400;
	letter-spacing: 2px;
}

#thanks{
	padding-top: 2%;
}

#contact-info{
	font-size: 150%;
}

#mail-link{
	text-decoration: underline;
}

.form{
	font-size: 110%;
}

.row{
	margin-top: 2%;
}

#portfolio-container{
	margin-top: 3%;
	padding-top: 3%;
	border-top: 1px solid #DCDCDC;
	padding-bottom: 3%;
}

#portfolio-container h3{
	font-size: 300%;
}

#portfolio-container p{
	font-size: 200%;
}

.larger-font{
	font-size: 130%;
}

.padding-top{
	padding-top: 45px !important;
}

.softer-font{
	font-weight:300 !important;
}

.text-center{
	text-align:center;
}

.even-larger-font{
	font-size: 175%;
}

.project-container{
	border: 1px solid #DCDCDC;
	padding-top: 3%;
	padding-bottom: 3%;
}

.project-header{
	font-size: 225%;
}

.project-container a{
	padding-bottom: 3%;
	margin-bottom: 5%;
	font-size: 150%;
}

